--- a/ServerProto/package.json
+++ b/ServerProto/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "EventEmitter": "^1.0.0",
     "fbemitter": "^2.1.1",
+    "npm": "^5.7.1",
     "ovrui": "~2.0.0",
     "react": "16.0.0",
     "react-dom": "^16.2.0",
