--- a/devel/image_upload/server/package.json
+++ b/devel/image_upload/server/package.json
@@ -1,13 +1,14 @@
 {
   "name": "serverful",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Simple image upload application",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "cloudinary": "^1.10.0",
     "connect-mongo": "~1.3.2",
     "express": "^4.16.0",
-    "formidable": "^1.2.0",
-    "fs": "0.0.1-security",
+    "express-fileupload": "^0.4.0",
     "mongodb": "^3.0.4",
     "mongoose": "^4.11.14",
     "multer": "~1.3.0"
