--- a/image_upload/package.json
+++ b/image_upload/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "browser-sync": "2.23.6",
     "cloudinary": "^1.10.0",
     "connect-mongo": "~1.3.2",
     "express": "^4.16.0",
     "express-fileupload": "^0.4.0",
+    "gulp": "3.9.1",
+    "gulp-nodemon": "2.2.1",
     "mongodb": "^3.0.4",
     "mongoose": "^4.11.14",
     "multer": "~1.3.0"
@@ -17,7 +20,7 @@
     "nodemon": "^1.17.1"
   },
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Alex Eiffert",
