--- a/ServerProto/package.json
+++ b/ServerProto/package.json
@@ -14,11 +14,12 @@
     "fbemitter": "^2.1.1",
     "npm": "^5.7.1",
     "ovrui": "~2.0.0",
-    "react": "16.0.0",
+    "react": "^16.0.0",
     "react-dom": "^16.2.0",
     "react-native": "~0.48.0",
     "react-redux": "^5.0.6",
-    "react-vr": "~2.0.0",
+    "react-transition-group": "^2.2.1",
+    "react-vr": "^2.0.0",
     "react-vr-web": "~2.0.0",
     "redux": "^3.7.2",
     "three": "^0.87.0",
