--- a/motherload/package.json
+++ b/motherload/package.json
@@ -22,11 +22,12 @@
     "gulp": "3.9.1",
     "gulp-nodemon": "2.2.1",
     "mongoose": "4.12.3",
-    "morgan": "1.8.2"
+    "morgan": "1.8.2",
+    "npm": "5.8.0"
   },
   "devDependencies": {
+    "request": "2.85.0",
     "should": "13.1.2",
-    "request": "^2.81.0",
     "tape": "^4.7.0"
   }
 }
