Finalized Rooms and Bldgs endpoints. Refactored Frontend

--- a/motherload/.env
+++ b/motherload/.env
@@ -1,3 +1,3 @@
-API_KEY='627713686888251',
+API_KEY='627713686888251'
 API_SECRET='_GgV9Ru9rsEHFApnwTv_LedR-wg'
 MONGO_URI='mongodb://ippd:serverful@ds127842.mlab.com:27842/serverful'
