--- a/motherload/package.json
+++ b/motherload/package.json
@@ -21,9 +21,11 @@
     "express-fileupload": "0.4.0",
     "gulp": "3.9.1",
     "gulp-nodemon": "2.2.1",
+    "http": "0.0.0",
     "mongoose": "4.12.3",
     "morgan": "1.8.2",
-    "npm": "5.8.0"
+    "npm": "5.8.0",
+    "socket.io": "2.1.0"
   },
   "devDependencies": {
     "request": "2.85.0",
